--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "hoi4ModUtilities.modFile": "c:\\Users\\Tom\\OneDrive\\Documents\\GitHub\\HoI4-Teufelshafen\\Teufelshafen.mod"
+    "hoi4ModUtilities.modFile": "c:\\Users\\Tom\\OneDrive\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\HoI4-Teufelshafen\\Teufelshafen.mod"
 }
